Updates to several plugins for Cacti 0.8.7 compatibility
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@123 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Flowviewer
-    Version ........ 0.3
+    Version ........ 0.4
     Purpose ........ A simple Viewer for your Netflow flows
 
 *******************************************************************************/
@@ -44,6 +44,7 @@
 
 	--- 0.4 ---
 		Minor fix for when using flow path "/"
+		Fix Cacti 0.8.7 Compatibility
 
 	--- 0.3 ---
 		Add time support for relative times (NOW, -1 HOUR, -2 DAYS, -10 MINTUES)
