--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Flowviewer
-    Version ........ 0.4
+    Version ........ 0.5
     Purpose ........ A simple Viewer for your Netflow flows
 
 *******************************************************************************/
@@ -42,6 +42,10 @@
 
 ----[ Changelog
 
+	--- 0.5 ---
+		Add flow-tools replacement startup script to allow launching of multiple processes based upon devices added
+		Fix issue with start and stop times close to midnight not loading the proper days data
+				
 	--- 0.4 ---
 		Minor fix for when using flow path "/"
 		Fix Cacti 0.8.7 Compatibility
