Add Edit / Deletion of Devices/Collectors Rework startup script Add ability to save Queries Change Sort field to be drop downs with column names and dynamically change when changing reports
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@218 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -45,6 +45,8 @@
 	--- 0.5 ---
 		Add flow-tools replacement startup script to allow launching of multiple processes based upon devices added
 		Fix issue with start and stop times close to midnight not loading the proper days data
+		Add Saved Queries
+		Change Sort field to be drop downs with column names
 				
 	--- 0.4 ---
 		Minor fix for when using flow path "/"
@@ -60,4 +62,4 @@
 
 	--- 0.1 ---
 		Initial release
-     
+
