Add ability to schedule and email out Netflow Scans
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@220 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -47,6 +47,7 @@
 		Fix issue with start and stop times close to midnight not loading the proper days data
 		Add Saved Queries
 		Change Sort field to be drop downs with column names
+		Add ability to schedule and email out Netflow Scans
 				
 	--- 0.4 ---
 		Minor fix for when using flow path "/"
