--- a/README
+++ b/README
@@ -44,6 +44,7 @@
 
 	--- 0.6 ---
 		Now only PA 2.0 compatible
+		Fix for IE and saving Queries
 
 	--- 0.5 ---
 		Add flow-tools replacement startup script to allow launching of multiple processes based upon devices added
