--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Flowviewer
-    Version ........ 0.5
+    Version ........ 0.5.1
     Purpose ........ A simple Viewer for your Netflow flows
 
 *******************************************************************************/
@@ -41,6 +41,9 @@
     Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+
+	--- 0.5.1 ---
+		Fix for IE and saving Queries
 
 	--- 0.5 ---
 		Add flow-tools replacement startup script to allow launching of multiple processes based upon devices added
