Fix for the plugin not auto-creating "plugin_flowview_devices" table
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/tags/0.5@271 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Flowviewer
-    Version ........ 0.5.1
+    Version ........ 0.5.2
     Purpose ........ A simple Viewer for your Netflow flows
 
 *******************************************************************************/
@@ -41,6 +41,9 @@
     Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+
+	--- 0.5.2 ---
+		Fix for the plugin not auto-creating "plugin_flowview_devices" table
 
 	--- 0.5.1 ---
 		Fix for IE and saving Queries
