Fix for Error when no devices
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@320 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -45,6 +45,7 @@
 	--- 0.6 ---
 		Now only PA 2.0 compatible
 		Fix for IE and saving Queries
+		Fix for Error when no devices
 
 	--- 0.5 ---
 		Add flow-tools replacement startup script to allow launching of multiple processes based upon devices added
