QA: More changes
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1396 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -44,6 +44,9 @@
 
     --- 0.7 ---
 	compat: Making compatible with 0.8.7g
+	feature: Allow sending emails on demand
+	feature: Add SaveAs, Delete, Update to UI
+	feature: Add a Veiweer Only Permission Level
 
     --- 0.6 ---
     compat: Now only PA 2.0 compatible
