QA: Update ChangeLog QA: Add Title for Scheduled Reports
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1406 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -43,10 +43,14 @@
 ----[ Changelog
 
     --- 0.7 ---
-	compat: Making compatible with 0.8.7g
-	feature: Allow sending emails on demand
-	feature: Add SaveAs, Delete, Update to UI
-	feature: Add a Veiweer Only Permission Level
+    compat: Making compatible with 0.8.7g
+    feature: Allow sending emails on demand
+    feature: Add SaveAs, Delete, Update to UI
+    feature: Add a Veiweer Only Permission Level
+    feature: Add a Title for Scheduled Reports
+    feature; Retool many reports into pure HTML
+    bug: Rename 'View' tab to 'Filter'
+    bug: Rename 'Devices' to 'Listeners'
 
     --- 0.6 ---
     compat: Now only PA 2.0 compatible
