QA: Update changelog QA: Bump to Release 1.0 QA: Change the way session purging works.
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1416 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
     Contact ........ jimmy@sqmail.org
     Home Site ...... http://cactiusers.org
     Program ........ Flowviewer
-    Version ........ 0.7
+    Version ........ 1.0
     Purpose ........ A simple Viewer for your Netflow flows
 
 *******************************************************************************/
@@ -42,13 +42,14 @@
 
 ----[ Changelog
 
-    --- 0.7 ---
+    --- 1.0 ---
     compat: Making compatible with 0.8.7g
     feature: Allow sending emails on demand
     feature: Add SaveAs, Delete, Update to UI
-    feature: Add a Veiweer Only Permission Level
+    feature: Add a Veiwer Only Permission Level
     feature: Add a Title for Scheduled Reports
-    feature; Retool many reports into pure HTML
+    feature; Re-tool many reports into pure HTML
+    feature: Add Graphs for Flows, Bytes, and Packets
     bug: Rename 'View' tab to 'Filter'
     bug: Rename 'Devices' to 'Listeners'
 
