QA: Fixed the legend display QA: Added sortable tables using jquery QA: Added ability to exclude TopX from report
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1419 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -50,6 +50,8 @@
     feature: Add a Title for Scheduled Reports
     feature; Re-tool many reports into pure HTML
     feature: Add Graphs for Flows, Bytes, and Packets
+	feature: Support sortable tables
+	feature: Support excluding outliers from report
     bug: Rename 'View' tab to 'Filter'
     bug: Rename 'Devices' to 'Listeners'
 
