--- a/README
+++ b/README
@@ -20,17 +20,40 @@
 
 ----[ Installation
 
+	Required:
+
     First, make sure you have the plugin architecture installed.
 
-    http://cactiusers.org/wiki/PluginArchitectureInstall
+    Then, Install just like any other plugin, just copy it into the plugin directory,
+    and Use Console->Plugin Mangement to Install and Enable.
 
-    Install just like any other plugin, just throw it in the plugin directory,
-    in a folder called flowview.
-    Edit your includes/config.php and add it to your $plugins list, and you are rolling
+	Then, you must install flow-tools.  Generally, flow-tools is available through yum, 
+	apt-get, emerge, etc.  Locate the path for your flow-tools (typically /usr/bin), and
+	decide on a location for your flow data (in many cases /var/flow, or any other location).
 
-    http://cactiusers.org/wiki/PluginsInstall
+	Once you have done all of this, goto Console->Settings->Misc and setup this information
+	in the FlowView section.
 
-   
+	Next you have to setup your Cacti server as a FlowView sink from your various
+	sources.  Then, from FlowView -> Listeners, you must add the various listeners for all
+	your flow-capture sources.
+
+	Optional:
+
+	If you don't already have flows coming to the cacti box and being stored with flow-capture
+	you may follow the steps below to have cacti do this.
+
+	Next copy the 'flow-caputure' file in the flowview plugin directory to '/etc/init.d/'
+	or the appropriate location.  You have to edit this file to set the cacti base path.
+
+	Finally, start the 'flow-capture' process using '/etc/init.d/flow-capture start'.
+
+	You may also want to insure that 'flow-capture' is a startup service using your operating
+	systems default process.
+
+	Also, remember that when using the Cacti 'flow-capture' init binary, that when you make
+	changes to the various listeners, you must subsequently 'restart' the 'flow-capture' binary.
+
 ----[ Possible Bugs?
    
     If you figure out this problem, let me know!!!
