git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1850 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -64,6 +64,8 @@
     Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
+    --- SVN ---
+    feature: Support for Ugroup Plugin
 
     --- 1.1 ---
     bug: FlowView Settings were hidden for some reason
