Some W3C Validation Changes
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1872 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -66,6 +66,7 @@
 ----[ Changelog
     --- SVN ---
     feature: Support for Ugroup Plugin
+    bug: Some W3C Validation Changes
 
     --- 1.1 ---
     bug: FlowView Settings were hidden for some reason
