bug: Not supporting Protocols correctly and Prefix/Suffix
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@1937 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -63,10 +63,11 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
-	--- 1.2 ---
+	--- SVN ---
 	feature: Support for Ugroup Plugin
 	feature: Use either the OS' DNS or Alternate
 	feature: Add strip domain capabilities
+    bug: Not supporting Protocols correctly and Prefix/Suffix
 	bug: Some W3C Validation Changes
 
 	--- 1.1 ---
