bug: Table plugin_flowview_devices wrong engine
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/flowview/trunk@2072 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -67,8 +67,9 @@
 	feature: Support for Ugroup Plugin
 	feature: Use either the OS' DNS or Alternate
 	feature: Add strip domain capabilities
-    bug: Not supporting Protocols correctly and Prefix/Suffix
+	bug: Not supporting Protocols correctly and Prefix/Suffix
 	bug: Some W3C Validation Changes
+	bug: Table plugin_flowview_devices wrong engine
 
 	--- 1.1 ---
 	bug: FlowView Settings were hidden for some reason
