--- a/locales/po/zh-CN.po
+++ b/locales/po/zh-CN.po
@@ -8,15 +8,14 @@ msgstr ""
 "Project-Id-Version: flowview on cacti 1.1.34\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-10 21:44-0400\n"
-"PO-Revision-Date: 2018-02-22 13:59+0800\n"
+"PO-Revision-Date: 2019-03-18 19:54-0400\n"
 "Last-Translator: \n"
 "Language-Team: sfqas <sfqas@163.com>\n"
-"Language: \n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: ../arrays.php:26
 msgid "Statistics Reports"
@@ -718,7 +717,7 @@ msgstr "过滤器已保存"
 #: ../flowview.php:611
 #, fuzzy
 msgid "Filter Settings Saved"
-msgstr "过滤器已保存"
+msgstr "过滤器设置保存"
 
 #: ../flowview.php:619
 msgid "Filter Updated"
@@ -974,12 +973,12 @@ msgstr "取消"
 #: ../flowview_devices.php:322
 #, fuzzy, php-format
 msgid "Device [edit: %s]"
-msgstr "设备: %s"
+msgstr "设备 [编辑: %s]"
 
 #: ../flowview_devices.php:324
 #, fuzzy
 msgid "Device [new]"
-msgstr "设备名称"
+msgstr "设备 [新建]"
 
 #: ../flowview_devices.php:389
 msgid "FlowView Listeners"
@@ -1154,7 +1153,7 @@ msgstr "报告： %s"
 #: ../flowview_schedules.php:308
 #, fuzzy
 msgid "Report: [new]"
-msgstr "报告： %s"
+msgstr "报告项目[新报告：%s]"
 
 #: ../flowview_schedules.php:397
 msgid "FlowView Schedules"
@@ -1381,8 +1380,9 @@ msgid "Plugin -> Flow Viewer"
 msgstr "流量查看器"
 
 #: ../setup.php:36
+#, fuzzy
 msgid "Plugin -> Flow Admin"
-msgstr ""
+msgstr "插件 - > Flow Admin"
 
 #: ../setup.php:85
 msgid "The Filter has been Deleted"
@@ -1453,8 +1453,9 @@ msgid "The method by which you wish to resolve hostnames."
 msgstr "您希望解析主机名的方法。"
 
 #: ../setup.php:250
+#, fuzzy
 msgid "Use Local Server"
-msgstr ""
+msgstr "使用本地服务器"
 
 #: ../setup.php:251
 #, fuzzy
@@ -1462,8 +1463,9 @@ msgid "Use DNS Server Below"
 msgstr "备用DNS服务器"
 
 #: ../setup.php:252
+#, fuzzy
 msgid "Don't Resolve DNS"
-msgstr ""
+msgstr "不要解析DNS"
 
 #: ../setup.php:257
 msgid "Alternate DNS Server"
@@ -1482,5 +1484,6 @@ msgid "A comma delimited list of domains names to strip from the domain."
 msgstr "逗号分隔的域名清单，以从域中剥离。"
 
 #: ../setup.php:271
+#, fuzzy
 msgid "Misc"
-msgstr ""
+msgstr "杂项"
